[package]
name = "wasm-rt-engine"
version = "0.0.0"
publish = false
edition = "2021"

[build]
target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "23.0.1" 
log = "0.4.22"
cfg-if = "1.0.0"
winit = "0.30.7"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = [
    "Document",
    "Window",
    "Element",
    "console",
    "HtmlCanvasElement"
]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"

